@@ -2481,6 +2481,11 @@ int parseLine(char *line, s_fidoconfig *config)
    else if (stricmp(token, "createareascase")==0) rc = parseNamesCase(getRestOfLine(), &(config->createAreasCase));
    else if (stricmp(token, "areasfilenamecase")==0) rc = parseNamesCase(getRestOfLine(), &(config->areasFileNameCase));
    else if (stricmp(token, "disabletid")==0) rc = parseBool(getRestOfLine(), &(config->disableTID));
+   else if (stricmp(token, "tossingext")==0) {
+      if ((temp=getRestOfLine()) != NULL)
+         rc = copyString(temp, &(config->tossingExt));
+        else config->tossingExt = NULL;
+   }
 
 #ifdef __TURBOC__
    else unrecognised++;
